# python-with-rust

./: README.md  pyproject.toml
python_with_rust/: cmd.py
python_with_rust/api/: update.py
