[tool.poetry]
name = "python-with-rust"
version = "1.1.0"
description = "Python with a splash of Rust!"
authors = ["Ed Rutherford <erutherford@nullsecurity.tech>"]
readme = "README.md"
packages = [{include = "python_with_rust"}]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.6.0"
rich-argparse = "^0.6.0"
rusty-python = {version = "^1.1.2", source = "testpypi"}


[tool.poetry.scripts]
rustpy-cli = 'python_with_rust.cmd:cli'

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
